# irsl_sim_environments

./: CMakeLists.txt  README.md  package.xml
cnoid/cafe_table/: README.md  cafe_table.body  cafe_table.scen
cnoid/depot/: README.md  conv.py  depot.body
cnoid/dining_table/: README.md  dining_table.body  dining_table.scen
cnoid/foodcourt_table/: README.md  foodcourt_table.body  foodcourt_table.scen
cnoid/harmonic/armchair/: README.md  armchair.body  armchair.scen
cnoid/harmonic/diningchair/: README.md  diningchair.body  diningchair.scen
cnoid/harmonic/lakehouse/: LakeHouse.ground.scen  README.md  lakehouse.body  lakehouse.ground.body
cnoid/harmonic/officechair/: README.md  officechair.body  officechair.scen
cnoid/harmonic/oven/: oven.body  oven.scen
cnoid/harmonic/refrigerator/: README.md  refrigerator.body  refrigerator.scen
cnoid/harmonic/sky/: README.md  sky.body  sky.scen
cnoid/puzzle_blocks/: puzzle_base.body  puzzle_table.body
cnoid/puzzle_blocks/brown_block/: brown_block.body
cnoid/puzzle_blocks/cyan_block/: cyan_block.body
cnoid/puzzle_blocks/green_block/: green_block.body
cnoid/puzzle_blocks/lightgreen_block/: lightgreen_block.body
cnoid/puzzle_blocks/purple_block/: purple_block.body
cnoid/puzzle_blocks/red_block/: red_block.body
cnoid/world/: depot_world.yaml  lake_house_world.yaml  puzzle_blocks.yaml
scripts/: make_puzzle_env.py  puzzle_blocks_functions.py  puzzle_blocks_main.py
urdf/puzzle_blocks/: puzzle_base.urdf  puzzle_base_fixed.urdf  puzzle_table.urdf  spawn_puzzle_script.sh  spawn_scripts.sh
(+22 files in other folders)
